<resources>
    <string name="app_name">FnalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_home">Home</string>
    <string name="ic_list">Local Recipes</string>
    <string name="add">Add Recipe</string>
    <string name="live_data">Recipes</string>
    <string name="help">Help</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="lang">Language</string>
    <string name="others">Others</string>
    <string name="add_recipes_to_list_item">Add Recipes to List item</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_type">Recipe Type</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="reset">Reset</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="favroties">Favorites</string>
    <string name="search">Search</string>
</resources>