<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >


        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/ic_home"/>

        <item android:id="@+id/nav_listview"
            android:icon="@drawable/ic_list"
            android:title="@string/ic_list"/>

        <item android:id="@+id/nav_add"
            android:icon="@drawable/ic_add"
            android:title="@string/add"/>

        <item android:id="@+id/nav_list_online"
            android:icon="@drawable/ic_live"
            android:title="@string/live_data"/>

    <item android:id="@+id/nav_fvrt"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favroties"/>


    <item android:title="@string/others">
               <menu>
               <item android:id="@+id/nav_info"
                   android:icon="@drawable/ic_info"
                   android:title="@string/about"/>

               <item android:visible="false"
                   android:id="@+id/nav_lang"
                   android:icon="@drawable/ic_lang"
                   android:title="@string/lang"/>
               </menu>
       </item>



</menu>