<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/bg"
    android:layout_gravity="center"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="Edit User"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:hintTextColor="@color/black"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvName"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:hintTextColor="@color/black"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvPhone"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayou"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:hintTextColor="@color/black"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvEmail"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <Button
           android:backgroundTint="@color/purple_700"
           android:id="@+id/btnSave"
           android:layout_marginTop="10dp"
           android:textColor="@color/white"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:layout_marginEnd="50dp"
           android:text="Save"/>
       <Button
           android:backgroundTint="@color/purple_700"
           android:id="@+id/btnClose"
           android:layout_marginTop="10dp"
           android:textColor="@color/white"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:text="Cancel"/>
   </LinearLayout>


</LinearLayout>