<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:layout_height="match_parent"
    tools:context=".UI.activity1">


    <GridLayout
        android:id="@+id/Grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="3"
        android:paddingBottom="10dp"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024">

        <!--Row one-->
        <androidx.cardview.widget.CardView
            android:id="@+id/listView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="0"
            android:padding="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_list"
                    app:tint="@color/menu" />

                <TextView
                    android:id="@+id/WeatherT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ic_list"
                    android:textColor="@color/menu"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/addList"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_add"
                    app:tint="@color/menu" />

                <TextView
                    android:id="@+id/CropT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="@color/menu"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/liveData"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="2"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_live"
                    app:tint="@color/menu" />

                <TextView
                    android:id="@+id/NewsT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/live_data"

                    android:textColor="@color/menu"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <!--Row one-->

        <!--Row two-->
        <androidx.cardview.widget.CardView
            android:id="@+id/favrtList"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="1"
            android:layout_column="0"
            android:padding="10dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_favorite"
                    app:tint="@color/menu" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/favroties"
                    android:textColor="@color/menu"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </GridLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>